移除没有用的模块和代码

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 	var obj = document.getElementById('pay');
 	obj.onclick = function(){
 
-		window.location.href = 'buy://lexue?productID=34248&productPrice=2&payType=1&coupon_id=';
+		window.location.href = 'lexuegaokao://myStory/http:||www.lexue.com|store|my?token=11111';
 	}
 
 	var test = document.getElementById('test');
